--- a/index.html
+++ b/index.html
@@ -5,14 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <section class="section1">
+      <nav class="botones-menu">
+        <div class="spotify-logo">
+          <a href="https://accounts.spotify.com/es-ES/login"
+            ><button>
+              <img src="./images/spotify-logo.png" alt="spotify-logo" /></button
+          ></a>
+        </div>
+        <div class="botones">
+          <a href="https://www.spotify.com/es/premium/"
+            ><button><span>Premium</span></button></a
+          >
+        </div>
+        <div class="botones">
+          <a href="https://artists.spotify.com/es/discovery-mode"
+            ><button><span>Discovery</span></button></a
+          >
+        </div>
+        <div class="botones">
+          <a href="https://support.spotify.com/es/"
+            ><button><span>Help</span></button></a
+          >
+        </div>
+        <div class="botones">
+          <a href="https://www.spotify.com/es/download/other/"
+            ><button><span>Download</span></button></a
+          >
+        </div>
+      </nav>
+      <header>
+        <h1>Music for everyone.</h1>
+        <p class="parrafo-titulo">
+          Spotify is now free on mobile, tablet and computer.
+        </p>
+        <p class="parrafo-titulo">
+          Listen to the right music, wherever you are.
+        </p>
+      </header>
+    </section>
+    <section class="section2">
+      <div class="titulo2">
+        <h2>What’s on Spotify?</h2>
+      </div>
+      <div class="ventajas">
+        <div class="music-icon">
+          <img class="icono" src="./images/music-icon.png" alt="music-icon" />
+          <h3 class="parrafo-icono">Millions of Songs</h3>
+          <p class="parrafo-icono">
+            There are millions of<br />
+            songs on Spotify
+          </p>
+        </div>
+        <div class="high-quality-icon">
+          <img
+            class="icono"
+            src="./images/high-quality-icon.png"
+            alt="high-quality-icon"
+          />
+          <h3 class="parrafo-icono">HD Music</h3>
+          <p class="parrafo-icono">
+            Listen to music as if you<br />
+            were listening live
+          </p>
+        </div>
+        <div class="devices-icon">
+          <img
+            class="icono"
+            src="./images/devices-icon.png"
+            alt="devices-icon"
+          />
+          <h3 class="parrafo-icono">Stream Everywhere</h3>
+          <p class="parrafo-icono">
+            Stream music on your<br />
+            smartphone, tablet or<br />
+            computer
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section3">
+      <div class="titulo3">
+        <h2>It’s as yeezy as Kanye West.</h2>
+        <div class="funciones">
+          <h3>Search</h3>
+          <p>
+            Know what you want to listen to?<br />
+            Just search and hit play.
+          </p>
+        </div>
+        <div class="funciones">
+          <h3>Browse</h3>
+          <p>
+            Check out the latest charts,<br />
+            brand new releases and great<br />
+            playlists for right now.
+          </p>
+        </div>
+        <div class="funciones">
+          <h3>Discover</h3>
+          <p>
+            Enjoy new music every Monday<br />
+            with your own personal playlist.<br />
+            Or sit back and enjoy Radio.
+          </p>
+        </div>
+      </div>
+      <div class="spotify-icon-white">
+        <img src="./images/spotify-icon-white.png" alt="spotify-icon-white" />
+      </div>
+      <div class="spotify-app">
+        <img src="./images/spotify-app.jpg" alt="spotify-app" />
+      </div>
+    </section>
   </body>
 </html>
